4.0/_sources/devicetools.rst.txt
.. |Auxfiler| replace:: :class:`~hydpy.core.auxfiletools.Auxfiler`
.. |ConditionSequence| replace:: :class:`~hydpy.core.sequencetools.ConditionSequence`
.. |Device.extract_new| replace:: :func:`~hydpy.core.devicetools.Device.extract_new`
.. |Device.keywords| replace:: :const:`~hydpy.core.devicetools.Device.keywords`
.. |Device.name| replace:: :const:`~hydpy.core.devicetools.Device.name`
.. |Device.query_all| replace:: :func:`~hydpy.core.devicetools.Device.query_all`
.. |Devices.add_device| replace:: :func:`~hydpy.core.devicetools.Devices.add_device`
.. |Devices.copy| replace:: :func:`~hydpy.core.devicetools.Devices.copy`
.. |Devices.remove_device| replace:: :func:`~hydpy.core.devicetools.Devices.remove_device`
.. |Devices| replace:: :class:`~hydpy.core.devicetools.Devices`
.. |Device| replace:: :class:`~hydpy.core.devicetools.Device`
.. |Double| replace:: :class:`~hydpy.cythons.autogen.pointerutils.Double`
.. |Element.close_files| replace:: :func:`~hydpy.core.devicetools.Element.close_files`
.. |Element.init_model| replace:: :func:`~hydpy.core.devicetools.Element.init_model`
.. |Element.inlets| replace:: :const:`~hydpy.core.devicetools.Element.inlets`
.. |Element.inputs| replace:: :const:`~hydpy.core.devicetools.Element.inputs`
.. |Element.model| replace:: :const:`~hydpy.core.devicetools.Element.model`
.. |Element.open_files| replace:: :func:`~hydpy.core.devicetools.Element.open_files`
.. |Element.outlets| replace:: :const:`~hydpy.core.devicetools.Element.outlets`
.. |Element.outputs| replace:: :const:`~hydpy.core.devicetools.Element.outputs`
.. |Element.plot_fluxseries| replace:: :func:`~hydpy.core.devicetools.Element.plot_fluxseries`
.. |Element.plot_inputseries| replace:: :func:`~hydpy.core.devicetools.Element.plot_inputseries`
.. |Element.plot_stateseries| replace:: :func:`~hydpy.core.devicetools.Element.plot_stateseries`
.. |Element.prepare_allseries| replace:: :func:`~hydpy.core.devicetools.Element.prepare_allseries`
.. |Element.prepare_fluxseries| replace:: :func:`~hydpy.core.devicetools.Element.prepare_fluxseries`
.. |Element.prepare_inputseries| replace:: :func:`~hydpy.core.devicetools.Element.prepare_inputseries`
.. |Element.prepare_model| replace:: :func:`~hydpy.core.devicetools.Element.prepare_model`
.. |Element.prepare_stateseries| replace:: :func:`~hydpy.core.devicetools.Element.prepare_stateseries`
.. |Element.receivers| replace:: :const:`~hydpy.core.devicetools.Element.receivers`
.. |Element.senders| replace:: :const:`~hydpy.core.devicetools.Element.senders`
.. |Element.variables| replace:: :const:`~hydpy.core.devicetools.Element.variables`
.. |Elements.load_fluxseries| replace:: :func:`~hydpy.core.devicetools.Elements.load_fluxseries`
.. |Elements.load_inputseries| replace:: :func:`~hydpy.core.devicetools.Elements.load_inputseries`
.. |Elements.load_stateseries| replace:: :func:`~hydpy.core.devicetools.Elements.load_stateseries`
.. |Elements.prepare_models| replace:: :func:`~hydpy.core.devicetools.Elements.prepare_models`
.. |Elements.save_fluxseries| replace:: :func:`~hydpy.core.devicetools.Elements.save_fluxseries`
.. |Elements.save_inputseries| replace:: :func:`~hydpy.core.devicetools.Elements.save_inputseries`
.. |Elements.save_stateseries| replace:: :func:`~hydpy.core.devicetools.Elements.save_stateseries`
.. |Elements| replace:: :class:`~hydpy.core.devicetools.Elements`
.. |Element| replace:: :class:`~hydpy.core.devicetools.Element`
.. |False| replace:: :const:`False`
.. |FluxSequence| replace:: :class:`~hydpy.core.sequencetools.FluxSequence`
.. |FusedVariable.clear_registry| replace:: :func:`~hydpy.core.devicetools.FusedVariable.clear_registry`
.. |FusedVariable.get_registry| replace:: :func:`~hydpy.core.devicetools.FusedVariable.get_registry`
.. |FusedVariable| replace:: :class:`~hydpy.core.devicetools.FusedVariable`
.. |HydPy.conditions| replace:: :const:`~hydpy.core.hydpytools.HydPy.conditions`
.. |HydPy.prepare_models| replace:: :func:`~hydpy.core.hydpytools.HydPy.prepare_models`
.. |HydPy.simulate| replace:: :func:`~hydpy.core.hydpytools.HydPy.simulate`
.. |HydPy| replace:: :class:`~hydpy.core.hydpytools.HydPy`
.. |IOSequence.load_ext| replace:: :func:`~hydpy.core.sequencetools.IOSequence.load_ext`
.. |IOSequence.memoryflag| replace:: :const:`~hydpy.core.sequencetools.IOSequence.memoryflag`
.. |IOSequence.save_ext| replace:: :func:`~hydpy.core.sequencetools.IOSequence.save_ext`
.. |IOSequence.series| replace:: :const:`~hydpy.core.sequencetools.IOSequence.series`
.. |IOSequence| replace:: :class:`~hydpy.core.sequencetools.IOSequence`
.. |InputSequence| replace:: :class:`~hydpy.core.sequencetools.InputSequence`
.. |Keywords| replace:: :class:`~hydpy.core.devicetools.Keywords`
.. |Model.connect| replace:: :func:`~hydpy.core.modeltools.Model.connect`
.. |Model.load_data| replace:: :func:`~hydpy.core.modeltools.Model.load_data`
.. |Model.simulate| replace:: :func:`~hydpy.core.modeltools.Model.simulate`
.. |Model.update_outputs| replace:: :func:`~hydpy.core.modeltools.Model.update_outputs`
.. |Model| replace:: :class:`~hydpy.core.modeltools.Model`
.. |Node.close_files| replace:: :func:`~hydpy.core.devicetools.Node.close_files`
.. |Node.deploymode| replace:: :const:`~hydpy.core.devicetools.Node.deploymode`
.. |Node.get_double| replace:: :func:`~hydpy.core.devicetools.Node.get_double`
.. |Node.open_files| replace:: :func:`~hydpy.core.devicetools.Node.open_files`
.. |Node.plot_allseries| replace:: :func:`~hydpy.core.devicetools.Node.plot_allseries`
.. |Node.plot_obsseries| replace:: :func:`~hydpy.core.devicetools.Node.plot_obsseries`
.. |Node.plot_simseries| replace:: :func:`~hydpy.core.devicetools.Node.plot_simseries`
.. |Node.prepare_allseries| replace:: :func:`~hydpy.core.devicetools.Node.prepare_allseries`
.. |Node.prepare_obsseries| replace:: :func:`~hydpy.core.devicetools.Node.prepare_obsseries`
.. |Node.prepare_simseries| replace:: :func:`~hydpy.core.devicetools.Node.prepare_simseries`
.. |Node.variable| replace:: :const:`~hydpy.core.devicetools.Node.variable`
.. |Nodes.load_obsseries| replace:: :func:`~hydpy.core.devicetools.Nodes.load_obsseries`
.. |Nodes.load_simseries| replace:: :func:`~hydpy.core.devicetools.Nodes.load_simseries`
.. |Nodes.save_obsseries| replace:: :func:`~hydpy.core.devicetools.Nodes.save_obsseries`
.. |Nodes.save_simseries| replace:: :func:`~hydpy.core.devicetools.Nodes.save_simseries`
.. |Nodes| replace:: :class:`~hydpy.core.devicetools.Nodes`
.. |Node| replace:: :class:`~hydpy.core.devicetools.Node`
.. |Obs| replace:: :class:`~hydpy.core.sequencetools.Obs`
.. |Options.warnmissingcontrolfile| replace:: :const:`~hydpy.core.optiontools.Options.warnmissingcontrolfile`
.. |OutputSequence| replace:: :class:`~hydpy.core.sequencetools.OutputSequence`
.. |Parameters.update| replace:: :func:`~hydpy.core.parametertools.Parameters.update`
.. |Parameters| replace:: :class:`~hydpy.core.parametertools.Parameters`
.. |Sequences.close_files| replace:: :func:`~hydpy.core.sequencetools.Sequences.close_files`
.. |Sequences.open_files| replace:: :func:`~hydpy.core.sequencetools.Sequences.open_files`
.. |Sequences.reset| replace:: :func:`~hydpy.core.sequencetools.Sequences.reset`
.. |Sequences.trim_conditions| replace:: :func:`~hydpy.core.sequencetools.Sequences.trim_conditions`
.. |Sequences| replace:: :class:`~hydpy.core.sequencetools.Sequences`
.. |Sim| replace:: :class:`~hydpy.core.sequencetools.Sim`
.. |StateSequence| replace:: :class:`~hydpy.core.sequencetools.StateSequence`
.. |Timegrids.eval_| replace:: :attr:`~hydpy.core.timetools.Timegrids.eval_`
.. |Timegrid| replace:: :class:`~hydpy.core.timetools.Timegrid`
.. |True| replace:: :const:`True`
.. |aggregate_series| replace:: :func:`~hydpy.core.seriestools.aggregate_series`
.. |clear_registries_temporarily| replace:: :func:`~hydpy.core.devicetools.clear_registries_temporarily`
.. |conv_v001| replace:: :mod:`~hydpy.models.conv_v001`
.. |dam| replace:: :mod:`~hydpy.models.dam`
.. |devicetools| replace:: :mod:`~hydpy.core.devicetools`
.. |evap_v001| replace:: :mod:`~hydpy.models.evap_v001`
.. |hbranch| replace:: :mod:`~hydpy.models.hbranch`
.. |hland_v1| replace:: :mod:`~hydpy.models.hland_v1`
.. |lland_v2| replace:: :mod:`~hydpy.models.lland_v2`
.. |matplotlib| replace:: :mod:`~matplotlib`
.. |repr| replace:: :func:`repr`
.. |selectiontools| replace:: :mod:`~hydpy.core.selectiontools`
.. |sequencetools| replace:: :mod:`~hydpy.core.sequencetools`
.. |str| replace:: :class:`str`
.. |valid_variable_identifier| replace:: :func:`~hydpy.core.objecttools.valid_variable_identifier`
.. |conv_control.InputCoordinates| replace:: :class:`~hydpy.models.conv.conv_control.InputCoordinates`
.. |conv_control.OutputCoordinates| replace:: :class:`~hydpy.models.conv.conv_control.OutputCoordinates`
.. |evap_fluxes.ReferenceEvapotranspiration| replace:: :class:`~hydpy.models.evap.evap_fluxes.ReferenceEvapotranspiration`
.. |evap_inputs.AirTemperature| replace:: :class:`~hydpy.models.evap.evap_inputs.AirTemperature`
.. |figure.Figure| replace:: :class:`~matplotlib.figure.Figure`
.. |hland_fluxes.Q0| replace:: :class:`~hydpy.models.hland.hland_fluxes.Q0`
.. |hland_fluxes.Q1| replace:: :class:`~hydpy.models.hland.hland_fluxes.Q1`
.. |hland_inputs.EPN| replace:: :class:`~hydpy.models.hland.hland_inputs.EPN`
.. |hland_inputs.P| replace:: :class:`~hydpy.models.hland.hland_inputs.P`
.. |hland_inputs.TN| replace:: :class:`~hydpy.models.hland.hland_inputs.TN`
.. |hland_inputs.T| replace:: :class:`~hydpy.models.hland.hland_inputs.T`
.. |hland_states.SM| replace:: :class:`~hydpy.models.hland.hland_states.SM`
.. |hland_states.SP| replace:: :class:`~hydpy.models.hland.hland_states.SP`
.. |hland_states.WC| replace:: :class:`~hydpy.models.hland.hland_states.WC`
.. |lland_inputs.PET| replace:: :class:`~hydpy.models.lland.lland_inputs.PET`
.. |lland_inputs.TemL| replace:: :class:`~hydpy.models.lland.lland_inputs.TemL`

.. _devicetools:

devicetools
===========

.. automodule:: hydpy.core.devicetools
    :members:
    :show-inheritance:
    :exclude-members: CLASSES, RUN_METHODS, ADD_METHODS, INLET_METHODS, OUTLET_METHODS, RECEIVER_METHODS, SENDER_METHODS, PART_ODE_METHODS, FULL_ODE_METHODS, CONTROLPARAMETERS, DERIVEDPARAMETERS, FIXEDPARAMETERS, REQUIREDSEQUENCES, UPDATEDSEQUENCES, RESULTSEQUENCES, SOLVERPARAMETERS, SOLVERSEQUENCES, SUBMETHODS, SUBMODELS, fastaccess, fastaccess_new, fastaccess_old, pars, seqs
